[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "password-strength-analyzer"
version = "0.1.0"
description = "A defensive password strength analyzer using rules and entropy"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name="Victor Rosario" }
]

dependencies = []

[project.scripts]
analyze-password = "cli:main"
